--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section class="text-center my-5">
         <h2>Escanea nuestro Código QR</h2>
-        <img src="qr.png" alt="Código QR" class="img-fluid" style="width: 150px;">
+        <img src="qr-codigo.png" alt="Código QR" class="img-fluid" style="width: 150px;">
     </section>
 
     <footer class="bg-dark text-while text-center p-3">
