--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Siguenos en nuestras redes</h2>
         <div class="d-flex justify-content-center gap-4 mt-3">
             <a href="#" class="text-primary"><i class="fab fa-facebook fa-2x"></i></a>
-            <a href="#" class="text-warning"><i class="fab fa-tiktok fa-2x"></i></a>
+            <a href="#" class="text-success"><i class="fab fa-tiktok fa-2x"></i></a>
             <a href="#" class="text-danger"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
     </section>
